cmake_minimum_required(VERSION 3.10)
project(STLite)

set(CMAKE_CXX_STANDARD 14)

# add_compile_options(-Wl,--stack=16777216)

add_executable(priority_queue_one priority_queue_data/one/code.cpp)
add_executable(priority_queue_one_memcheck priority_queue_data/one.memcheck/code.cpp)
add_executable(priority_queue_two priority_queue_data/two/code.cpp)
add_executable(priority_queue_two_memcheck priority_queue_data/two.memcheck/code.cpp)
add_executable(priority_queue_three priority_queue_data/three/code.cpp)
add_executable(priority_queue_three_memcheck priority_queue_data/three.memcheck/code.cpp)
add_executable(priority_queue_four priority_queue_data/four/code.cpp)
add_executable(priority_queue_four_memcheck priority_queue_data/four.memcheck/code.cpp)
add_executable(priority_queue_five priority_queue_data/five/code.cpp)
add_executable(priority_queue_five_memcheck priority_queue_data/five.memcheck/code.cpp)

add_executable(map_one map_data/one/code.cpp)
add_executable(map_one_memcheck map_data/one.memcheck/code.cpp)
add_executable(map_two map_data/two/code.cpp)
add_executable(map_two_memcheck map_data/two.memcheck/code.cpp)
add_executable(map_three map_data/three/code.cpp)
add_executable(map_three_memcheck map_data/three.memcheck/code.cpp)
add_executable(map_four map_data/four/code.cpp)
add_executable(map_four_memcheck map_data/four.memcheck/code.cpp)
add_executable(map_five map_data/five/code.cpp)
add_executable(map_five_memcheck map_data/five.memcheck/code.cpp)
add_executable(map_six map_data/six/code.cpp)
add_executable(map_six_memcheck map_data/six.memcheck/code.cpp)
add_executable(map_seven map_data/seven/code.cpp)
add_executable(map_seven_memcheck map_data/seven.memcheck/code.cpp)

add_executable(deque_one deque_data/one/code.cpp)
add_executable(deque_one_memcheck deque_data/one.memcheck/code.cpp)
add_executable(deque_two deque_data/two/code.cpp)
add_executable(deque_two_memcheck deque_data/two.memcheck/code.cpp)
add_executable(deque_three deque_data/three/code.cpp)
add_executable(deque_three_memcheck deque_data/three.memcheck/code.cpp)
add_executable(deque_four deque_data/four/code.cpp)
add_executable(deque_four_memcheck deque_data/four.memcheck/code.cpp)
add_executable(deque_five deque_data/five/code.cpp)
add_executable(deque_six deque_data/six/code.cpp)
